[package]
name = "google-authz"
version = "1.0.0-alpha.5"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "This library provides auto-renewed tokens for Google service authentication."
repository = "https://github.com/mechiru/google-authz"
documentation = "https://docs.rs/google-authz"
categories = ["authentication"]
keywords = ["google", "cloud", "auth", "gcloud", "gcp"]
readme = "README.md"
include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**/*",
]

[workspace]
members = ["examples"]

[dependencies]
tracing = { version = "0.1", default-features = false, features = ["std"] }
thiserror = "1.0"
parking_lot = "0.12"
futures-util = "0.3"
bytes = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
jsonwebtoken = "9.3"
gcemeta = "0.3"
tower-service = "0.3"
hyper = { version = "1.4", features = ["client", "http2"] }
# https://github.com/rustls/rustls/blob/8c04dba680d19d203a7eda1951ad596f5fc2ae59/rustls/Cargo.toml#L36-L47
# https://github.com/rustls/hyper-rustls/blob/a6a5687ff79330388ff84694b67a7eed6b4e5c51/Cargo.toml#L36-L45
hyper-rustls = { version = "0.27", default-features = false, features = ["http2"] }
hyper-util = { version = "0.1", features = ["http2", "client-legacy"] }
http-body-util = "0.1"

[dev-dependencies]
tokio = { version = "1.40", features = ["macros"] }

[features]
default = ["aws-lc-rs", "native-certs"]
tonic = []
aws-lc-rs = ["hyper-rustls/aws-lc-rs"]
ring = ["hyper-rustls/ring"]
native-certs = ["hyper-rustls/native-tokio"]
webpki-roots = ["hyper-rustls/webpki-tokio"]
