[package]
name = "examples"
version = "0.1.0"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
google-authz = { path = "../", features = ["tonic"] }
# grpc + gcp
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
google-api-proto = { version = "1", features = ["google-pubsub-v1"] }
rustls = "0.23"
hyper-util = { version = "0.1", features = ["http2", "client-legacy"] }
hyper-rustls = "0.27"
http-body-util = "0.1"
bytes = "1.7"
hyper = "1.4"
futures-util = "0.3"
tower-service = "0.3"

[[bin]]
name = "tonic"
path = "src/tonic.rs"

[[bin]]
name = "hyper"
path = "src/hyper.rs"
